--- a/pag.html
+++ b/pag.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>1°Site</title>
+    <title>1° Site</title>
     <link rel="stylesheet" href="Via 1.css">
 </head>
 <body>
-    <body style="background-color:wheat;"></body>
-    <p style="font-size:200%;">tenho duas coisas para falar...</p>
-    <h1>Para-bens</h1>
-    <p style="background-color:tomato;font-size:50%;">você é Gay.</p>
-    <a href="https://github.com/XxivinhoxX">clica no link</a><br>
-    <img src="gato.gif" alt="W3Schools.com" width="100" height="142">
-    <h2 style="color:blue;">OBS</h2>
-    <p style="color:rgb(241, 19, 19);font-size:200%;">Todos amam o GODOT.</p>
+    <body style="background-color:rgb(255, 255, 255);"></body>
+    <h1 style="color:#F45410;">Marcenaria Feiten</h1>
+    <a href="https://www.canva.com/design/DAF_4KHdKmc/HvoVqETYHY2iZ-5gL_-AlA/edit">link do canva</a><br>
 </body>
 </html>
