--- a/pag.html
+++ b/pag.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>1° Site</title>
+    <title>Marcenaria Feiten</title>
     <link rel="stylesheet" href="Via 1.css">
 </head>
 <body>
-    <body style="background-color:rgb(255, 255, 255);"></body>
-    <h1 style="color:#F45410;">Marcenaria Feiten</h1>
-    <a href="https://www.canva.com/design/DAF_4KHdKmc/HvoVqETYHY2iZ-5gL_-AlA/edit">link do canva</a><br>
+    <header>
+        <h1>Marcenaria Feiten</h1>
+        <nav>
+            <a href="home.html">Home</a>
+            <a href="produtos.html">Produtos</a>
+            <a href="contatos.html">Contato</a>
+        </nav>
+    </header>
+    <section class="hero">
+        <h2>Bem-vindo à nossa marcenaria</h2>
+        <p>Encontre móveis sob medida e projetos exclusivos.</p>
+        <a href="produtos.html" class="btn">Ver Produtos</a>
+    </section>
+    <footer>
+        <p>&copy; 2024 Marcenaria Feiten. Todos os direitos reservados.</p>
+    </footer>
 </body>
 </html>
