--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="login-box">
             <h2>Login - Marcenaria</h2>
-            <form action="pag.html">
+            <form action="index.html">
                 <div class="textbox">
                     <input type="text" placeholder="Nome da Conta" name="username" required>
                 </div>
