--- a/produtos.html
+++ b/produtos.html
@@ -12,7 +12,7 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="produtos.html">Produtos</a>
-            <a href="contato.html">Contato</a>
+            <a href="contatos.html">Contato</a>
         </nav>
     </header>
     <main class="container">
@@ -21,27 +21,55 @@
                 <img src="imagem/mesademadeira.png" alt="Produto 1">
                 <h2>MESA DE JANTAR BERLIM</h2>
                 <p>1,56 X 0,90 COM CADEIRAS HAVANA CASTANHO.</p>
-                <p class="price">R$3.959,99</p>
+                <p class="price">R$4.959,99</p>
             </div>
             <div class="product">
-                <img src="produto2.jpg" alt="Produto 2">
-                <h2>Produto 2</h2>
-                <p>Descrição do Produto 2.</p>
-                <p class="price">R$ 149,99</p>
+                <img src="imagem/mesadesinuca.jpg" alt="Produto 2">
+                <h2>MESA DE SINUCA ARTESANAL</h2>
+                <p>2,80 x 1,52 COM 2 UNIDADES DE TACOS DE BILHAR</p>
+                <p class="price">R$1.299.99</p>
             </div>
             <div class="product">
-                <img src="produto3.jpg" alt="Produto 3">
-                <h2>Produto 3</h2>
-                <p>Descrição do Produto 3.</p>
-                <p class="price">R$ 199,99</p>
+                <img src="imagem/relogiocuco.png" alt="Produto 3">
+                <h2>RELOGIO CUCO</h2>
+                <p>RELOGIO ESTILO CUCO A BASE DE MADEIA DE CARVALHO/ESTILO FLORESTA NEGRA</p>
+                <p class="price">R$599,99</p>
             </div>
-            <!-- Adicione mais produtos conforme necessário -->
+            <div class="product">
+                <img src="imagem/estante1.jpg" alt="Produto 4">
+                <h2>ESTANTE DE MADIERA DE ACÁCIA</h2>
+                <p>2,28 X 1,73 X 0,45 ESTANTE ESTILO VITORIANO A BASE DE MADEIRA DE ACÁCIA</p>
+                <p class="price">R$4.999,99</p>
+            </div>
+            <div class="product">
+                <img src="imagem/jacusi1.jpg" alt="Produto 5">
+                <h2>JACUZZI DE MADEIA</h2>
+                <p>1,75 X 1,75 X 0,94  JACUZZI DE MADEIRA A BASE DE PINUS (MONTAGEM INCLUIDA)</p>
+                <p class="price">R$9.999,99</p>
+            </div>
+            <div class="product">
+                <img src="imagem/moto1.jpg" alt="Produto 6">
+                <h2>MOTO DE MADEIRA</h2>
+                <p>MOTO AMADEIRADA E CILINDRADA, 160KM/H A BASE DE MADEIRA DE CARVALHO</p>
+                <p class="price">R$29.999,99</p>
+            </div>
+            <div class="product">
+                <img src="imagem/pinoquio.jpg" alt="Produto 7">
+                <h2>PINOQUIO</h2>
+                <p>UM ARTEFATO MAGICO COM APARENCIA DE UM BONECO FURTADO DO PROPRIO GEPPETTO</p>
+                <p class="price">R$59.999,99</p>
+            </div>
+            <!-- fim dos produtos -->
         </section>
         <aside class="sidebar">
             <ul>
-                <li><a href="#produto1">Produto 1</a></li>
-                <li><a href="#produto2">Produto 2</a></li>
-                <li><a href="#produto3">Produto 3</a></li>
+                <li><a href="#produto1">MESA DE JANTAR</a></li>
+                <li><a href="#produto2">MESA DE SINUCA</a></li>
+                <li><a href="#produto3">RELOGIO</a></li>
+                <li><a href="#produto4">ESTANTE</a></li>
+                <li><a href="#produto5">JACUZZI</a></li>
+                <li><a href="#produto6">MOTO</a></li>
+                <li><a href="#produto7">BONECO</a></li>
                 <!-- Adicione mais links conforme necessário -->
             </ul>
         </aside>
